(? extends GuiRegionEditor): refactor