@@ -11,8 +11,8 @@ import mirrg.minecraft.regioneditor.util.gui.WindowWrapper;
 public class GuiUrl extends GuiInputBox
 {
 
-	public URI uri;
-	public URL url;
+	public URI resultUri;
+	public URL resultUrl;
 
 	public GuiUrl(WindowWrapper owner, I18n i18n)
 	{
@@ -25,8 +25,8 @@ public class GuiUrl extends GuiInputBox
 		if (!super.parse(string)) return false;
 
 		try {
-			uri = new URI(string);
-			url = new URL(string);
+			resultUri = new URI(string);
+			resultUrl = new URL(string);
 		} catch (URISyntaxException | MalformedURLException e1) {
 			e1.printStackTrace();
 			setException(e1);
